[package]
name = "caesura"
edition = "2021"
build = "build.rs"
authors = ["DevYukine <devyukine@gmx.de>", "RogueOneEcho"]
description = "An all-in-one command line tool to **transcode FLAC** audio files and **upload to gazelle** based indexers/trackers. "
repository = "https://github.com/RogueOneEcho/caesura"
license = "AGPL-3.0-only"
include = [
    "src/**/*",
    "tests/**/*",
    "build.rs",
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE.HISTORIC.md",
    "LICENSE.md",
    "README.md"
]
version = "0.0.0"
publish = true

[dependencies]
audiotags = "^0.5"
bytes = "^1.7"
clap = { version = "^4.5", features = ["derive"] }
claxon = "^0.4"
colored = "^2.1"
html-escape = "^0.2"
indicatif = "^0.17"
log = { version = "^0.4", features = ["std"] }
more-di = { version = "^3.1", features = ["async", "builder"] }
num_cpus = "^1.16"
regex = "^1"
reqwest = { version = "^0.12", features = ["rustls-tls", "json", "multipart", "stream"], default-features = false }
serde_json = "^1"
tokio = { version = "^1", features = ["full"] }
tower = { version = "^0.5", features = ["util", "limit"] }
serde = { version = "^1.0", features = ["derive"] }

[build-dependencies]
built = "^0.7"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
#restriction = { level = "warn", priority = -2 }

module_inception = "allow"
just_underscores_and_digits = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
match_same_arms = "allow"
if_not_else = "allow"
enum_glob_use = "allow"
needless_pass_by_value = "allow"
unwrap_used = "warn"
missing_docs_in_private_items = "allow"
implicit_return = "allow"
expect_used = "allow"
indexing_slicing = "warn"
if_then_some_else_none = "allow"
str_to_string = "warn"
missing_inline_in_public_items = "allow"
question_mark_used = "allow"
single_call_fn = "allow"
non_ascii_literal = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
exhaustive_enums = "allow"
exhaustive_structs ="allow"
std_instead_of_core = "allow"
std_instead_of_alloc = "allow"
tests_outside_test_module = "allow"
pub_use = "allow"
string_add = "allow"
mod_module_files = "allow"
wildcard_enum_match_arm = "warn"
unneeded_wildcard_pattern = "warn"
panic = "warn"
as_conversions = "allow"
absolute_paths = "allow"
get_first = "warn"
pattern_type_mismatch = "allow"
arithmetic_side_effects = "allow"
new_without_default = "allow"
integer_division = "warn"
separated_literal_suffix = "allow"
unseparated_literal_suffix = "warn"
# TODO COULD re-consider the following allows:
result_large_err = "allow"
clone_on_ref_ptr = "allow"
unused_self = "allow"
wildcard_imports = "allow"
missing_errors_doc = "allow"
# TODO SHOULD investigate solution to await_holding_lock
await_holding_lock = "allow"
